# ProxmoxMCP-Plus

./: Dockerfile  README.md  SETUP.md  docker-compose.yml  install.sh  manifest.json  pyproject.toml  server.json  setup-ssh.sh  setup.py
.github/workflows/: ci.yml
docs/: llms.txt
docs/releases/: v0.5.3.md  v0.5.4.md  v0.5.6.md  v0.5.7.md
docs/wiki/: API & Tool Reference.md  Client Setup.md  Developer Guide.md  Documentation Quality Plan.md  Home.md  Integrations Guide.md  Operator Guide.md  README.md  Release & Upgrade Notes.md  Security Guide.md  Tool Selection Guide.md  _Sidebar.md
proxmox-config/: config.example.json
src/proxmox_mcp/: __init__.py  openapi_proxy.py  server.py
src/proxmox_mcp/config/: loader.py  models.py
src/proxmox_mcp/core/: proxmox.py  ssh_tunnel.py
src/proxmox_mcp/services/: builtin_tool_plugins.py
src/proxmox_mcp/tools/: base.py  definitions.py  vm.py
src/proxmox_mcp/tools/console/: container_manager.py  manager.py
tests/: test_high_risk_tools.py  test_openapi_proxy.py  test_release_metadata.py  test_security_hardening.py  test_server.py  test_ssh_tunnel.py  test_tool_user_paths.py
