[project]
name = "proxmox-mcp-plus"
version = "0.5.6"
description = "Enhanced Proxmox MCP Server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kevin" },
]
keywords = ["proxmox", "mcp", "virtualization", "openapi", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.8.0,<2.0.0",
    "proxmoxer>=2.0.1,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcpo>=0.0.17",
    "paramiko>=5.0.0,<6.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<7.0.0",
    "black>=24.3.0,<27.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.1.0,<0.2.0",
    "build>=1.2.0,<2.0.0",
    "types-paramiko>=4.0.0.20260508,<5.0.0",
    "types-requests>=2.31.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/RekklesNA/ProxmoxMCP-Plus"
Documentation = "https://github.com/RekklesNA/ProxmoxMCP-Plus#readme"
Repository = "https://github.com/RekklesNA/ProxmoxMCP-Plus.git"
Issues = "https://github.com/RekklesNA/ProxmoxMCP-Plus/issues"

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"
proxmox-mcp-plus = "proxmox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/proxmox_mcp",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "proxmoxer",
    "mcpo",
    "mcpo.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: runs live Proxmox and OpenAPI end-to-end checks",
]
